--- a/main.tex
+++ b/main.tex
@@ -1903,30 +1903,36 @@ To answer these questions, a discussion with the community about the use cases a
 
 \section{Conclusion}
 
-The success of general purpose clustering and classification algorithms depends on right feature selection and data transformation.
-In particular, feature selection is often quite challenging.
-This makes training of models a trial-and-error approach.
-Even if an optimal solution is found there is no guarantee that the approach with other data on other systems.
-We assume that there indeed are so many different types of jobs, but there are too many of them for manual labeling.
+In this work, we described various approaches to cluster 1 million jobs based on their IO behavior.
+Therefore, we pre-processed the periodically gathered node metrics by converting this fine-grained resolution into 10-minute segments using various pre-processing stacks.
+Our contribution is the systematic evaluation and discussion of various approaches for the clustering.
+The success of clustering algorithms depends on the right feature selection and data transformation.
 
-
-After a series of experiments with general purpose algorithms we could not achieve the optimal results.
-The investigation of resulting clusters shows that they are obviously polluted.
+After a series of experiments with general purpose algorithms, we could not achieve suitable results.
+While we could have applied traditional approaches such as k-means on the data, we found that the large number of classes and unknown knowledge about the jobs doesn't suit this use case.
 One problem might be that we apply a combination of a clustering and a classification algorithm.
 The classification algorithm is trained by the potential erroneous output of the clustering algorithm and it can itself produce erroneous output, which multiples the total error.
-Another problem might be that both algorithms are not aware of I/O performance and I/O phases.
-As this work shows, this might be quite important.
-At least, we achieve better results by considering both aspects.
+Even if a better solution would found there is no guarantee that the generated model could be applied on another system.
 
-For this reason, we found that the Levenshtein distance is generally not suitable.
+In the evaluation, we investigated the quantiative and qualitative behavior of different algorithms.
+The investigation of clusters shows that, particularly clusters with little IO activity are noisy and do not meet our expectation.
+Depending on the similarity chosen by the user, there are many different clusters with phenotypes of jobs found.
+Thus, exceeding the ability for manual inspection and manual labeling.
 
-Job comparison by means of hexadecimal coding is more precise, because hexadecimal coding sequences are much longer.
-Absolute coding aggregates three dimensions (Metric, Nodes, and FileSystems) resulting in a nine times shorter coding sequence than hexadecimal coding, which aggregates only two dimensions (Nodes, and FileSystems).
-Having more data, a more precise computation.
+Our analysis shows that considering the relative I/O performance and I/O phases improves the clustering.
 The integration of the awareness of I/O performance produces better, but still not sophisticated results.
-We suppose that the I/O phase awareness is the missing feature for success.
-The final algorithm that detects phases and differentiates performance values produces at first sight clean results.
-Due to the huge amount of clusters and lack of automatic evaluation tools, we can not prove this statement for all clustres.
+Therefore, we found that the Levenshtein distance is generally not suitable for similarity of IO behavior of jobs.
+
+Absolute coding aggregates three dimensions (Metric, Nodes, and FileSystems) resulting in a nine times shorter coding sequence than hexadecimal coding, which aggregates only two dimensions (Nodes, and FileSystems).
+Using hexadecimal coding is more precise than binary coding because hexadecimal coding sequences longer.
+However, using the actual native floating point value is problematic for the developed algorithms as for high similarity it will generate too many clusters.
+Therefore, we consider the quantization of hexadecimal is appropriate for this use case.
+
+The phase matching algorithm detects phases and differentiates performance values.
+In our analysis, it produced even for smaller relative similarity good results.
+These algorithms can be used in practice to identify jobs similar to another.
+%Due to the huge amount of clusters and lack of automatic evaluation tools, we can not prove this statement for all clustres.
+%This makes training of models a trial-and-error approach.
 
 
 \subsection{Future Work}
