--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,7 @@
 \WarningFilter{caption}{Forced redefinition}
 \WarningFilter{caption}{The option}
 \WarningFilter{caption}{Unknown document}
+%\WarningFilter{hyperref}{Suppressing}
 
 \usepackage{array}
 \usepackage{cite}
@@ -42,7 +43,7 @@
 \JHPSkeywords{XX, TODO}   % add 2-5 keywords
 
   % Author macro takes Name, Institution, Optional Link to the person, Optional Email
-\JHPSauthor{Eugen Betke}{DKRZ\\Hamburg, Germany}{}{betke@dkrz.de}
+\JHPSauthor{Eugen Betke}{DKRZ\\Hamburg, Germany}{dummy}{betke@dkrz.de}
 \JHPSauthor{Julian Kunkel}{University of Reading\\Reading, UK}{https://hps.vi4io.org/about/people/julian_kunkel}{j.m.kunkel@reading.ac.uk}   % use empty email here
 
 \title{Classifying Temporal Characteristics of Job I/O Using Machine Learning Techniques}
@@ -420,25 +421,21 @@ This coding preserves monitoring data for each metric and each segment.
 As the name suggests, the value of a segment is converted into a hexadecimal number to allow creation of a string representing the IO behavior.
 The numbers are obtained in two steps.
 Firstly, the dimension reduction aggregates the file system and the node dimensions and computes a mean value for each metric and segment, which lies in the interval [0,4].
-Secondly, the mean values are quantized into 16 levels -- 0 represents the interval [0,0.125), 1 [0.125,0.375), $ \ldots $ , [3.625,4].
-The example in \Cref{tab:hex_example} shows hexadecimal coding for a job containing 6 segments.
+Secondly, the mean values are quantized into 16 levels -- 0 represents the interval [0,0.25), 1 [0.5,0.75), $ \ldots $ , [3.75,4].
+The example below shows hexadecimal coding for a job containing 6 segments.
 
-\begin{table}
-  \centering
-  \begin{tabular}{ll}
-    md\_file\_create & [00\textbf{2}\textbf{2}\textbf{2}\textbf{9}] \\
-    md\_file\_delete & [000000]                                     \\
-    md\_mod          & [000000]                                     \\
-    md\_other        & [000000]                                     \\
-    md\_read         & [000\textbf{9}30]                            \\
-    read\_bytes      & [\textbf{5}00000]                            \\
-    read\_calls      & [000000]                                     \\
-    write\_bytes     & [0000\textbf{f}\textbf{f}]                   \\
-    write\_calls     & [000000]
-  \end{tabular}
-  \caption{Example of a hexadecimal coding for 6 segments.}
-  \label{tab:hex_example}
-\end{table}
+\begin{lstlisting}
+jobB: 'length': 6, 'coding':
+'md_file_create' : [002229],
+'md_file_delete' : [000000],
+'md_mod'         : [000000],
+'md_other'       : [000000],
+'md_read'        : [000930],
+'read_bytes'     : [500000],
+'read_calls'     : [000000],
+'write_bytes'    : [0000ff],
+'write_calls'    : [000000]
+\end{lstlisting}
 
 \subsubsection{Similarity}
 Determining the resemblance between two jobs is the main task of this work.
